--- a/src/Pages/Authentication/Login/Login.css
+++ b/src/Pages/Authentication/Login/Login.css
@@ -1,23 +1,33 @@
-/* .login_custom {
-    background: linear-gradient(45deg, #ffffff 25%, transparent 25%), linear-gradient(315deg, #ffffff 25%, transparent 25%),linear-gradient(45deg, transparent 24%,#ac7223 25%, #ac7223 45%, transparent 45%), linear-gradient(315deg, transparent 24%,#ac7223 25%, #ac7223 45%, transparent 45%);
-    background-size: 0.5em 0.5em;
-    background-color: #ffffff;
-    opacity: 1
-} */
-
-
 
 .form-input {
   width: 100%;
   padding: 12px 16px 11px;
   font-size: 14px;
-  background-color: #fff;
-  border: 1px solid #d7e3e7;
-  box-sizing: border-box;
-  box-shadow: 0 2px 4px rgba(14, 79, 206, 0.13);
   border-radius: 3px;
   color: #596a78;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
+
+.input-border{
+  background-color: #fff;
+  border: 1px solid #d7e3e7;
+  box-sizing: border-box;
+  box-shadow: 0 2px 4px rgba(14, 79, 206, 0.13);
+}
+
+.error-input-border{
+  border: 1.5px solid #c92f2f;
+  box-sizing: border-box;
+  /* box-shadow: 4px 4px 14px rgba(209, 129, 86, 0.13); */
+}
+
+
+.error-input-border::placeholder{
+  color: #c92f2f;
+  font-weight: 700;
+}
+
+
+
 
