--- a/src/Pages/Shared/NavBar/NavBar.css
+++ b/src/Pages/Shared/NavBar/NavBar.css
@@ -1,25 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 .noto-sans-font {
   font-family: "Noto Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings: "wdth" 100;
 }
 
-.nav_width{
-    width: 98%;
-    align-items: flex-end;
+.nav_width {
+  width: 98%;
+  align-items: flex-end;
 }
 
-.navOptions,.navOptions>.active,.navOptions:hover{
+.navOptions,
+.navOptions > .active {
   background: white !important;
   color: black !important;
-  /* font-size: larger !important; */
+  font-size: medium !important;
   font-weight: 600 !important;
-  
 }
