--- a/src/Pages/Home/PopularCourse/PopularCourse.css
+++ b/src/Pages/Home/PopularCourse/PopularCourse.css
@@ -1,36 +1,32 @@
 /* SwiperComponent.css */
-.mySwiper_custom{
-    height: 540px;
-    border: 2px solid blue;
-    background-color: #F09A0F;
+.mySwiper_custom {
+  height: 540px;
 }
-.swiper-slide{
-  border: 2px solid #F09A0F;
+.swiper-slide {
   height: max-content;
-  background-color: blue;
 }
 .swiper-pagination__custom {
-    bottom: 0px; /* Position from the bottom */
-    text-align: center; /* Center the pagination */
-    background-color: brown;
-  }
-  
-.swiper-pagination-bullet {
-    background: #cfd3d7; 
-    width: 20px; 
-    height: 20px; 
-    border-radius: 50%;
-    border: 2px solid grey; 
-    opacity: 1; 
-    transition: #007aff 0.3s, transform 0.3s; 
-  }
-  
-.swiper-pagination-bullet-active {
-    background: #F09A0F; /* Active bullet color */
-    transform: scale(1.2); /* Scale up the active bullet */
-  }
+  bottom: 0px; /* Position from the bottom */
+  text-align: center; /* Center the pagination */
+}
 
-  /* .popular_bg{
+.swiper-pagination-bullet {
+  background: #cfd3d7;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid grey;
+  opacity: 1;
+  transition: #007aff 0.3s, transform 0.3s;
+
+}
+
+.swiper-pagination-bullet-active {
+  background: #f09a0f; /* Active bullet color */
+  transform: scale(1.2); /* Scale up the active bullet */
+}
+
+/* .popular_bg{
     background-image: url('./noise.png');
   }
    */
