--- a/src/Pages/Home/PopularCourse/PopularCourse.css
+++ b/src/Pages/Home/PopularCourse/PopularCourse.css
@@ -1,13 +1,13 @@
 /* SwiperComponent.css */
-.mySwiper_custom {
-  height: 540px;
-}
+/* .mySwiper_custom {
+  height: 560px;
+} */
 .swiper-slide {
   height: max-content;
 }
 .swiper-pagination__custom {
-  bottom: 0px; /* Position from the bottom */
-  text-align: center; /* Center the pagination */
+  bottom: 0px; 
+  text-align: center; 
 }
 
 .swiper-pagination-bullet {
@@ -22,11 +22,6 @@
 }
 
 .swiper-pagination-bullet-active {
-  background: #f09a0f; /* Active bullet color */
-  transform: scale(1.2); /* Scale up the active bullet */
+  background: #f09a0f; 
+  transform: scale(1.2); 
 }
-
-/* .popular_bg{
-    background-image: url('./noise.png');
-  }
-   */
