--- a/src/Pages/CourseDetails/CourseDetails.css
+++ b/src/Pages/CourseDetails/CourseDetails.css
@@ -1,6 +1,6 @@
 
 .enroll_btn_class {
-    width: 100px;
+    width: 100%;
     height: 45px;
     border: 3px solid #4A6DB0;
     background: #4A6DB0;
